--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,4 +1,38 @@
 {
+   "spots": {
+      "0": {
+         "1": "Пустырь",
+         "2": "Поляна",
+         "3": "Вода"
+      },
+      "1": {
+         "1": "Пустырь",
+         "2": "Поляна",
+         "3": "Вода"
+      },
+
+      "2": "Холмы",
+      "3": "Разлом",
+      "4": "Груда камней",
+      "5": {
+         "1": "Мёртвый лес",
+         "2": "Лес"
+      },
+      "6": "Гора",
+      "10": "Озеро",
+      "20": "Башня",
+      "21": "Ферма",
+      "22": "Шахта",
+      "23": "Дом лесника",
+      "24": "Посёлок",
+      "25": "Большой посёлок",
+      "26": "Город",
+      "27": "Большой город",
+      "28": "Лодка",
+      "29": "Форт",
+      "30": "Колодец",
+      "31": "Колодец"
+   },
    "resources": {
       "1": "Колодец",
       "2": "Каменная шахта",
