--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -89,5 +89,9 @@
       "501": "Шахта рубинов",
       "502": "Шахта алмазов",
       "503": "Шахта изумрудов"
-   }
+   },
+   "produces": "Производит",
+   "forEach": "за каждый такой ресурс в радиусе {x}",
+   "ifHas": "если в радиусе {x} есть ресурс:",
+   "escape": "Нажмите escape чтобы отменить"
 }
