Add deconstruction logic

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,7 @@
          "2": "Forest"
       },
       "6": "Mountain",
+      "8": "Destroy",
       "10": "Lake",
       "20": "Tower",
       "21": "Farm",
@@ -78,12 +79,12 @@
       "303": "Forge",
       "304": "Forge",
       "399": "Books",
-      "400": "Tower of scientists",
-      "401": "Tower of scientists",
-      "402": "Tower of scientists",
-      "403": "Tower of scientists",
-      "404": "Tower of scientists",
-      "405": "Tower of scientists",
+      "400": "Tower of astrologer",
+      "401": "Tower of alchemist",
+      "402": "Tower of naturalist",
+      "403": "Tower of historian",
+      "404": "Tower of theologian",
+      "405": "Tower of scientist",
       "499": "Jewelry",
       "500": "Gold mine",
       "501": "Ruby mine",
