--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -19,6 +19,7 @@
          "2": "Лес"
       },
       "6": "Гора",
+      "8": "Снести",
       "10": "Озеро",
       "20": "Башня",
       "21": "Ферма",
@@ -78,12 +79,12 @@
       "303": "Кузня",
       "304": "Кузня",
       "399": "Книги",
-      "400": "Башня учёных",
-      "401": "Башня учёных",
-      "402": "Башня учёных",
-      "403": "Башня учёных",
-      "404": "Башня учёных",
-      "405": "Башня учёных",
+      "400": "Башня астролога",
+      "401": "Башня алхимика",
+      "402": "Башня натуралиста",
+      "403": "Башня историка",
+      "404": "Башня теолога",
+      "405": "Башня учёного",
       "499": "Драгоценности",
       "500": "Золотая шахта",
       "501": "Шахта рубинов",
