--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -94,5 +94,6 @@
    "produces": "Производит",
    "forEach": "за каждый такой ресурс в радиусе {x}",
    "ifHas": "если в радиусе {x} есть ресурс:",
-   "escape": "Нажмите escape чтобы отменить"
+   "escape": "Нажмите escape, чтобы отменить",
+   "enter": "Нажмите enter, чтобы начать новый раунд"
 }
