Add gain animation

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -92,8 +92,9 @@
       "503": "Шахта изумрудов"
    },
    "produces": "Производит",
-   "forEach": "за каждый такой ресурс в радиусе {x}",
-   "ifHas": "если в радиусе {x} есть ресурс:",
+   "forEach": "за каждый",
+   "ifHas": "если есть",
+   "inRange": "в радиусе {x}",
    "escape": "Нажмите escape, чтобы отменить",
-   "enter": "Нажмите enter, чтобы начать новый раунд"
+   "enter": "Нажмите enter, чтобы начать игру"
 }
