--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -92,8 +92,10 @@
       "503": "Emerald mine"
    },
    "produces": "Produces",
-   "forEach": "for each of this in range {x}",
-   "ifHas": "if has any of this in range {x}",
+   "forEach": "for each",
+   "ifHas": "if has any",
+   "inRange": "in range {x}",
+
    "escape": "Press escape to cancel",
-   "enter": "Press enter to start new round"
+   "enter": "Press enter to start the game"
 }
