--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -89,12 +89,15 @@
       "500": "Золотая шахта",
       "501": "Шахта рубинов",
       "502": "Шахта алмазов",
-      "503": "Шахта изумрудов"
+      "503": "Шахта изумрудов",
+      "550": "Ювелир"
    },
    "produces": "Производит",
    "forEach": "за каждый",
    "ifHas": "если есть",
    "inRange": "в радиусе {x}",
    "escape": "Нажмите escape, чтобы отменить",
+   "consume": "Требует для производства:",
+   "passive": "Дополнительное производство во время",
    "enter": "Нажмите enter, чтобы начать игру"
 }
