--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -99,5 +99,25 @@
    "escape": "Нажмите escape, чтобы отменить",
    "consume": "Требует для производства:",
    "passive": "Дополнительное производство во время",
-   "enter": "Нажмите enter, чтобы начать игру"
+   "enter": "Нажмите enter, чтобы начать игру",
+   "gameOver": "Игра окончена",
+   "restart": "Заново",
+   "gameOvers": [
+      "--(Impossible)",
+      "Ваши люди медлленно умирают без еды и надежды",
+      "Враги безжалостно сокрушили вас",
+      "Голод и война пришли в ваши земли",
+      "--No water (impossible)",
+      "Все ваши фермы истощились",
+      "Чем вы собираетесь сражаться? Помидорами?",
+      "Голодающие воины бегут из вашей армии",
+      "--No clothes (impossible)",
+      "Ваши люди голодны и беззащитны",
+      "Ваши солдаты погибли без должной защиты",
+      "У вас самая слабая армия на свете",
+      "--No water and clothes (impossible)",
+      "Людей железом не накормишь",
+      "Ваши фермы насколько богаты урожаем, что их решили захватить соседи",
+      "Вы потеряли всё: еду, воду, оружие, одежды, веру"
+   ]
 }
