--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -96,6 +96,7 @@
    "forEach": "за каждый",
    "ifHas": "если есть",
    "inRange": "в радиусе {x}",
+   "level": "Уровень {x}",
    "escape": "Нажмите escape, чтобы отменить",
    "consume": "Требует для производства:",
    "passive": "Дополнительное производство во время",
@@ -119,5 +120,7 @@
       "Людей железом не накормишь",
       "Ваши фермы насколько богаты урожаем, что их решили захватить соседи",
       "Вы потеряли всё: еду, воду, оружие, одежды, веру"
-   ]
+   ],
+   "startGame": "Начать игру",
+   "empires": ["Империя людей"]
 }
