--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -121,6 +121,6 @@
       "Ваши фермы насколько богаты урожаем, что их решили захватить соседи",
       "Вы потеряли всё: еду, воду, оружие, одежды, веру"
    ],
-   "startGame": "Начать игру",
+   "startGame": "Выберите уровень, чтобы начать игру",
    "empires": ["Империя людей"]
 }
