--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,7 +12,7 @@
       },
 
       "2": "Холмы",
-      "3": "Разлом",
+      "3": "Руины",
       "4": "Груда камней",
       "5": {
          "1": "Мёртвый лес",
@@ -122,5 +122,6 @@
       "Вы потеряли всё: еду, воду, оружие, одежды, веру"
    ],
    "startGame": "Выберите уровень, чтобы начать игру",
-   "empires": ["Империя людей"]
+   "empires": ["Империя людей"],
+   "goals": "Цели"
 }
