--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -104,25 +104,27 @@
    "passive": "Extra production every",
    "gameOver": "Game over",
    "restart": "Restart",
+   "exit": "Exit",
    "gameOvers": [
-      "--(Impossible)",
+      "You can't play this game without... anything",
       "No food, no survival, people are starving",
       "Enemies ran out of mercy and destroyed your kingdom",
       "Hunger and war destroyed your plans rapidly",
-      "--No water (impossible)",
+      "So you have everything but people, how?",
       "All plants withered, pathetic",
       "Are you gonna fight with tomatoes?",
       "Starving warriors flee from your army",
-      "--No clothes (impossible)",
+      "It is not how you are supposed to play this game",
       "Your people are starving and defenseless",
       "Your soldiers died without any defense",
       "Starving and defenseless army is the worse army",
-      "--No water and clothes (impossible)",
+      "You destroyed the only building? Wonderfull...",
       "You cant feed your people with swords",
       "These farms were so rich, they attracted so many raiders",
       "You lost everything - no food, no weapon, no armor, no water, no help"
    ],
    "startGame": "Choose level to start the game",
    "empires": ["Human empire"],
+   "gameWon": "You won! One more?",
    "goals": "Goals"
 }
