--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -103,25 +103,27 @@
    "enter": "Нажмите enter, чтобы начать игру",
    "gameOver": "Игра окончена",
    "restart": "Заново",
+   "exit": "Выйти",
    "gameOvers": [
-      "--(Impossible)",
+      "В эту игры нельзя играть без зданий",
       "Ваши люди медлленно умирают без еды и надежды",
       "Враги безжалостно сокрушили вас",
       "Голод и война пришли в ваши земли",
-      "--No water (impossible)",
+      "У вас как бы есть всё кроме людей. Как?",
       "Все ваши фермы истощились",
       "Чем вы собираетесь сражаться? Помидорами?",
       "Голодающие воины бегут из вашей армии",
-      "--No clothes (impossible)",
+      "Такой исход событий не предполагался",
       "Ваши люди голодны и беззащитны",
       "Ваши солдаты погибли без должной защиты",
       "У вас самая слабая армия на свете",
-      "--No water and clothes (impossible)",
+      "Уничтожили единственное здание? Мда...",
       "Людей железом не накормишь",
       "Ваши фермы насколько богаты урожаем, что их решили захватить соседи",
       "Вы потеряли всё: еду, воду, оружие, одежды, веру"
    ],
    "startGame": "Выберите уровень, чтобы начать игру",
    "empires": ["Империя людей"],
+   "gameWon": "Славная победа! Ещё партию?",
    "goals": "Цели"
 }
