--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -34,6 +34,21 @@
       "30": "Колодец",
       "31": "Колодец"
    },
+   "rules": {
+      "0": "",
+      "20": "Можно сторить на поляне",
+      "21": "Можно сторить на поляне",
+      "22": "Можно строить на горе",
+      "23": "Можно сторить на лесу",
+      "24": "Можно сторить на поляне",
+      "25": "Можно сторить на поляне",
+      "26": "Можно сторить на поляне",
+      "27": "Можно сторить на поляне",
+      "28": "Можно сторить на воде",
+      "29": "Можно сторить на поляне",
+      "30": "Можно сторить на поляне",
+      "31": "Можно сторить на поляне"
+   },
    "resources": {
       "1": "Колодец",
       "2": "Каменная шахта",
@@ -125,5 +140,10 @@
    "startGame": "Выберите уровень, чтобы начать игру",
    "empires": ["Империя людей"],
    "gameWon": "Славная победа! Ещё партию?",
-   "goals": "Цели"
+   "goals": "Цели",
+   "help": {
+      "a": [
+         "Каждый ход вы выбираете пару кубов. Их сумма определяет, какие здания произведут ресурсы. Каждый день все здания нужно снабжать едой, а каждую ночь - оружием. Иначе они будут разрушены."
+      ]
+   }
 }
