--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -144,6 +144,9 @@
    "help": {
       "a": [
          "Каждый ход вы выбираете пару кубов. Их сумма определяет, какие здания произведут ресурсы. Каждый день все здания нужно снабжать едой, а каждую ночь - оружием. Иначе они будут разрушены."
+      ],
+      "b": [
+         "Некоторые участки нужно исследовать и озеленить. Это требует воду и одежду. Некоторые здания производят ресурсы только, если имеется достаточно сырья. Такие здания имеют дополнительное производство раз в день"
       ]
    }
 }
